Creating a connection between the user and tasks
